--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "framer-motion": "^12.10.4",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
